--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,15 @@
 <!doctype HTML>
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{name}}</title>
+  <link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
+</head>
 
-<title>{{name}}</title>
+<body>
+  <!-- Your HTML goes here -->
 
-<link rel="stylesheet" href="css/{{name}}.{{version}}{{#production}}.min{{/production}}.css">
-
-<!-- Your HTML goes here -->
-
-<script src="js/{{name}}.{{version}}{{#production}}.min{{/production}}.js"></script>
+  <script src="js/{{name}}.{{version}}{{#production}}.min{{/production}}.js"></script>
+</body>
 
